# Quantom

./: .gitignore  Atoms.txt  CompoundGenerator.py  Forcefield.txt  ForcefieldSummary.txt  Molecules.txt  README.md  install.sh
Compounds/: conf.gro  confout.gro  ener.edr  posre.itp  state.cpt  state_prev.cpt  topol.top  topol.tpr  traj_comp.xtc
Compounds/t4lys/: conf.gro  posre.itp
Compounds/t4lys_10/: topol.top
Compounds/testrun/: npt.mdp  solvated.gro
Demo/: README.md
Demo/6lzm/: conf.gro  topol.top
LIMA_ForcefieldMaker/LIMA_ForcefieldMaker/: Filehandling.h  ForcefieldMerger.cpp  ForcefieldMerger.h  ForcefieldTypes.h  LIMA_ForcefieldMaker.cpp  LIMA_ForcefieldMaker.vcxproj  LIMA_ForcefieldMaker.vcxproj.filters
LIMA_NET/: Dataloader.py  LIMA_DNN.py  LIMA_NET.py  LIMA_TOOLS.py  LIMA_TRAINER.py  main.py
LIMA_TrajAnalysis/LIMA_TrajAnalysis/: LIMA_TrajAnalysis.vcxproj  main.cpp
LIMA_services/: stats.asv  stats.m
LIMA_services/LIMA_services/: LIMA_services.vcxproj  main.cpp
Quantom/: Quantom.sln  VS_GLFW_settings.txt
Quantom/Quantom/: Analyzer.cu  Analyzer.cuh  Bodies.cu  Bodies.cuh  BoxBuilder.cu  BoxBuilder.cuh  CompoundBuilder.cpp  CompoundBuilder.h  Constants.cuh  Display.cpp  Display.h  DisplayV2.cpp  DisplayV2.h  Engine.cu  Engine.cuh  Environment.cpp  Environment.h  Filehandling.cpp  Filehandling.h  Forcefield.cu  Forcefield.cuh  Interface.cpp  Interface.h  Main.cpp  Quantom.vcxproj  QuantomTypes.cu  QuantomTypes.cuh  Rasterizer.cu  Rasterizer.cuh  Raytracer.cu  Raytracer.cuh  Simulation.cuh  (+3 more)
linux_stuff/: CMakeLists.txt  go.sh  linuxmaker.sh
(+5 files in other folders)
